21-03-15/17:33 1. body.overflow-y hidden의 경우 ios에서는 작동되지 않아, position fixed, scroll To로 변경

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -49,9 +49,6 @@ body .displayFlex {
 .textCenter {
   text-align: center;
 }
-.dialogOpen {
-  overflow-y: hidden;
-}
 .height100vh {
   height: 100vh;
   overflow: hidden;
